# resource-based_economy_strategy

./: .gitignore  .gitkeep  README.md  pyproject.toml
docs/: issue-3-design.md  version-0.0.2-design.md  version-0.0.3-design.md  version-0.0.4-design.md  version-0.0.5-design.md  version-0.0.6-design.md  version-0.0.7-design.md  version-0.01-design.md
examples/: hex_sphere_viewer.html  run_day_simulation.py  run_hex_sphere_viewer.py  run_planet_tour.py  run_time_control.py  run_webgl_planet_viewer.py
game1/: __init__.py  climate.py  hex_sphere.py  hex_sphere_viewer.py  planet.py  sphere_points.py  tech_tree.py  time_control.py  webgl_planet_viewer.py
resource_based_economy_strategy/: __init__.py  __main__.py  cli.py  scenarios.py  simulation.py
tests/: test_biome_generation.py  test_climate.py  test_hex_sphere.py  test_planet.py  test_simulation.py  test_sphere_points.py  test_tech_tree.py  test_time_control.py  test_version_005_gameplay.py  test_version_006_gameplay.py  test_version_007_gameplay.py
предложения к следующим версиям/: README.md
